2003-05-07  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.override (_wrap_gtk_radio_button_set_group,
	_wrap_gtk_radio_button_set_group): Implement. Patch by John
	Finlay, fixes #112054 and #112058.	
	(_wrap_gtk_ruler_get_range): Return a tuple of integers, not
	doubles. Patch by John Finlay, fixes #111716.	
	(_wrap_gtk_image_get_pixmap, _wrap_gtk_image_get_image) 
	(_wrap_gtk_image_get_stock, _wrap_gtk_image_get) 
	(_wrap_gtk_image_get_pixbuf, _wrap_gtk_image_get_animation):
	Implement. Patch by John Finlay, fixes #111400.
	(_wrap_gtk_scrolled_window_get_policy): Implement. Patch by John
	Finlay, fixes #112247.
	(_wrap_gtk_text_buffer_get_iter_at_child_anchor): Implement, Patch
	by John Finlay, fixes #112524.

	* gtk/gtk.defs (GtkImage.render_icon, set_image, 
	GtkStyle.render_icon): Allow None to be sent in. Patch by John
	Finlay, fixes #111389 and #111416.

2003-04-29  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/Makefile.am (pygtk_PYTHON): Install dsextras.

2003-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (py_modules): Install dsextras.py

2003-03-24  James Henstridge  <james@daa.com.au>

	* pygobject-private.h: add missing "extern" keyword (from Glyph's
	patch).

2003-03-23  James Henstridge  <james@daa.com.au>

	* setup.py: increment version number.

	* NEWS: add news items.

	* configure.in (numpy check): fix up check for Numeric and
	increment version number.

2003-03-21  Johan Dahlin  <jdahlin@async.com.br>

        * gtk/gtk.override (_wrap_gtk_tree_store_new):
        (_wrap_gtk_list_store_new): This two are constructors, not normal
        function, therefor return -1 as error and 0 as success.
	Also a big tab/trailing whitespace cleanup. (so the patch is a lot
        larger than it should be)

2003-03-19  Johan Dahlin  <jdahlin@async.com.br>

        * gtk/gdk.defs (get_option): Added.

2003-03-13  James Henstridge  <james@daa.com.au>

        * gobjectmodule.c: add doc comments.

        * pygobject.c: add doc comments.
