@@ -1,3 +1,9 @@
+2003-05-23  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
+
+	* codegen/defsparser.py (IncludeParser.include): Made
+	pygtk-codegen able to read from stdin, by specifying a single dash
+	(-) as file name.
+
 2003-05-07  Johan Dahlin  <jdahlin@async.com.br>
 
 	* gtk/gtk.override (_wrap_gtk_radio_button_set_group,
